# AdCP-Showcase

./: .env.example  .gitignore  Capstone-Project.md  PRD.md  README.md  buyer_agent_architecture.md  generate_buyer_seller_pngs.py  pyproject.toml
adcp-dashboard/: index.html  package-lock.json  vite.config.publisher.js
adcp-dashboard/data/: generate_snapshot.mjs  system_snapshot.json
adcp-dashboard/docs/: DATA_MODEL.md
adcp-dashboard/src/: App.jsx  IntelligenceShowcase.jsx  PublisherApp.jsx  index.css  main.jsx
adcp-dashboard/src/hooks/: useAgentData.js  useForecastFeed.js  useIntelligenceFeed.js  usePublisherData.js  usePublisherIntelligenceFeed.js
backend/: generate_buyer_seller_pngs.py  generate_context_engineering_png.py  generate_workflow_png.py
backend/src/adcp_showcase/: __init__.py  cli.py  database_api.py  demo.py  manager.py  mcp_client.py  registry.py
backend/src/adcp_showcase/buyer/: __init__.py  agent.py  server.py
demo-video/: .gitkeep
docs/: buyer_agent_architecture.md  sample_prompts.md
frontend/adcp-dashboard/: package.json  vite.config.js
frontend/adcp-dashboard/publisher/: index.html
frontend/adcp-dashboard/scripts/: export_snapshot.cjs
frontend/adcp-dashboard/src/: App.jsx  PublisherApp.jsx  index.css  main_publisher.jsx
frontend/intelligence-portal/: package.json
src/adcp_showcase/: __main__.py  database_api.py  demo.py  models.py
src/adcp_showcase/buyer/: budget.py  config.py  prompts.py
src/adcp_showcase/scripts/: seed_database.py
src/adcp_showcase/seller/: __init__.py  inventory.py  server.py  store.py
(+8 files in other folders)
