[project]
name = "adcp-showcase"
version = "0.1.0"
description = "Buyer and seller agents built on the Ad Context Protocol (AdCP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "google-genai>=1.0",
    "adcp>=4.0",
]

[project.scripts]
adcp-buyer-server = "adcp_showcase.buyer.server:main"
adcp-seller-server = "adcp_showcase.seller.server:main"
adcp-manager = "adcp_showcase.manager:cli_entry"
adcp-demo = "adcp_showcase.demo:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adcp_showcase"]